Fixed Layout problems.

--- a/HippieGenGwt/war/HippieGenGwt.css
+++ b/HippieGenGwt/war/HippieGenGwt.css
@@ -11,6 +11,8 @@ h1 {
 	text-align: center;
 }
 
+
+
 .sendButton {
   display: block;
   font-size: 16pt;
@@ -51,4 +53,9 @@ h1 {
 	font-size: 2em;
 	font-weight: bold;
 	text-align: center;
+}
+horz.element {
+	float: left;
+}
+horz.element-new {
 }
